<resources>
    <string name="app_name">FinancialPost</string>
    <string name="btn_home">首页</string>
    <string name="btn_col">数据</string>
    <string name="btn_sel">我的</string>
    <string name="hometitle">首页</string>
    <string name="btn_fin">财经</string>
    <string name="btn_stock">股票</string>
    <string name="btn_bank">银行</string>
    <string name="btn_bond">债券</string>
    <string name="btn_inv">保险</string>
    <string name="btn_poli">政策</string>
    <string name="mark_title">收藏</string>
    <string name="sel_title">信息</string>
    <string name="newstitle">新浪新闻</string>
    <string name="nomark">点击详情看看呢~</string>
    <string name="news_mark">收藏</string>
    <string name="btn_refresh">详情</string>
    <string name="title_activity_mark">MarkActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="info">  本应用每一次进入新闻列表时能自动获取网页上的最新新闻，并显示新闻发布时间。\n\n点击新闻标题可以进入详情界面查看新闻具体内容，详情界面可以选择将该新闻加入收藏夹，若已经收藏过，会进行提示。\n\n在收藏界面可以点击进入详情界面查看收藏夹，收藏夹会显示已经收藏过的新闻，包括新闻发布时间和收藏时间。点击标题可以查看新闻详情，长按标题可以删除该收藏。\n\n冯瑞婉 \n西南财经大学  \n2018年10月28日</string>
    <string name="app_name_cn">财经快报(Financial Post)</string>
    <string name="appname">财经快报</string>
    <string name="btn_delete">删除</string>
    <string name="nodata">您还没有相关记录哟</string>
    <string name="maker">冯瑞婉\n西南财经大学</string>
    <string name="btn_search">搜索</string>
    <string name="btn_year">年度</string>
    <string name="btn_dimen">维度</string>
    <string name="btn_place">地区</string>
    <string name="btn_report">报告</string>
    <string name="datatitle">数据</string>
    <string name="add">新建</string>
</resources>
