<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">

    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/btn_home"
            style="@style/tab_btn_style"
            android:drawableTop="@drawable/home"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/btn_col"
            style="@style/tab_btn_style"
            android:drawableTop="@drawable/marks" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/btn_sel"
            style="@style/tab_btn_style"
            android:drawableTop="@drawable/select"/>


    </LinearLayout>


</LinearLayout>